# course_work_3

./: .coverage  .gitignore  README.md  pyproject.toml
src/: main.py
tests/: test_func.py
utils/: func.py  test_operations.json
